popup/popup.sass
/*--- General ---*/
$height: 24rem
:root
  --uni-text: #333
  --uni-text-2: #777
  --uni-bg: white
  --uni-bg-2: #f0f0f0

body
  width: 18rem
  height: $height
  margin: 0
  color: var(--uni-text)
  background: var(--uni-bg-2)
  display: flex
  flex-direction: column
  *
    box-sizing: border-box

.header
  background: var(--background)
  position: absolute
  top: 0
  left: 0
  width: 100%
  z-index: -1
  height: 4rem

.settings
  z-index: 1
  overflow: hidden
  flex: 1 0 auto
  max-height: calc(#{$height} - 3rem)
  position: relative
  .page
    width: 100%
    height: 100%
    position: absolute
    top: 0
    left: -100%
    display: flex
    flex-direction: column
    &.active, &.lastActive
      transition: left .25s ease-in-out
    &.active
      left: 0
    .page_header
      width: 100%
      height: 4rem
      flex: 0 0 4rem
      margin: 0
      padding: .5rem 1rem
      color: var(--text)
      font-size: 2em
      line-height: 3rem
    .page_content
      width: 100%
      padding: 1em .5em 0
      flex-grow: 1
      overflow-y: auto
    .subheader
      margin: .5em 0 .125em
      font-size: 1.5em
    .description
      font-size: 1rem
      font-style: italic
      margin: .5em

  .active ~ .page
    left: 100%
    

/*--- navigation bar ---*/
.navigation_bar
  height: 3rem
  display: flex
  justify-content: space-evenly
  align-items: center
  padding: .4rem
  background: var(--uni-bg)
  .navigation_item
    cursor: pointer
    flex: 1 1 0
    height: 100%
    display: flex
    justify-content: center
    align-items: center
    svg
      height: 100%
    &:not(.active) svg
      fill: var(--uni-text-2)
    &.active svg
      fill: var(--uni-text)

/*--- Inputs / settings ---*/
/*--- checkbox input ---*/
.checkbox_input
  display: flex
  align-items: center
  cursor: pointer
  margin-left: .5rem
  *
    pointer-events: none
  span
    font-size: 1.25rem
  &.checked
    .svg_checkbox_true
      opacity: 1

.svg_checkbox
  height: 1.5rem
  width: 1.5rem
  fill: var(--uni-text)
  .svg_checkbox_true
    opacity: 0
    // transition: opacity .15s linear

/*--- multiple choice ---*/
.multiple_choice
  display: flex
  flex-direction: column
  >span
    font-size: 1.65rem
    margin-top: .75rem
    margin-bottom: .25rem

.options_container
  margin: 0
  display: flex
  flex-direction: column

